--- a/Buy-sgin.html
+++ b/Buy-sgin.html
@@ -1,43 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buyers_Sign_In_Form</title>
-    <link rel="stylesheet" href="Buy-sgin.css">
+    <link rel="stylesheet" href="Buy-sgin.css" />
     <script defer src="Buy-sgin.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="logo"></div>
     <div class="container">
-        <div class="title">Login</div>
-        <br>
-        <form action="#">
+      <div class="title">Login</div>
+      <br />
+      <form action="#">
         <div class="user-details">
-            <div class="imgcontainer">
-                <img src="A logo 2.png" alt="Avatar" class="avatar">
-            </div>
-            <br>
-            <div class="input-box">
-                <span class="detials">User_Name</span>
-                <input id="User_text" type="text" placeholder="Enter Your User_name Here" required>
-            </div>
-            <div class="input-box">
-                <span class="detials">Password</span>
-                <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" placeholder="Enter Your Password Here" required>
-            </div>
+          <div class="imgcontainer">
+            <img src="A logo 2.png" alt="Avatar" class="avatar" />
+          </div>
+          <br />
+          <div class="input-box">
+            <span class="detials">Email</span>
+            <input
+              id="login_email"
+              type="text"
+              placeholder="Enter Your User_name Here"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <span class="detials">Password</span>
+            <input
+              type="password"
+              id="login_password"
+              name="psw"
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+              placeholder="Enter Your Password Here"
+              required
+            />
+          </div>
         </div>
         <div class="button1">
-            <button onclick="validate()" type="submit" class="input1">Sign_in</button>
-            <br>
-            <br>
-            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
-            <span class="psw" style="float: right;"><a href="#">Forgot password?</a></span>
+          <a id="login2" href="#">
+            <button id="login1" onclick="auth()" type="submit" class="input1">
+              Sign_in
+            </button>
+          </a>
+          <br />
+          <br />
+          <label>
+            <input type="checkbox" checked="checked" name="remember" /> Remember
+            me
+          </label>
+          <span class="psw" style="float: right"
+            ><a href="#">Forgot password?</a></span
+          >
         </div>
-        </form>
+      </form>
     </div>
   </body>
+
+  <!-- <script src="firebase.js"></script> -->
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+    import {
+      getAuth,
+      createUserWithEmailAndPassword,
+      signInWithEmailAndPassword,
+      signOut,
+    } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDbPXyCbCOJjzcyuv83DiCDOQ6we7UWW-8",
+      authDomain: "shopping-project-75280.firebaseapp.com",
+      projectId: "shopping-project-75280",
+      storageBucket: "shopping-project-75280.appspot.com",
+      messagingSenderId: "721785274820",
+      appId: "1:721785274820:web:bcccd4f4cd70351ddc2491",
+      measurementId: "G-1EYVF421XL",
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const auth = getAuth();
+
+    //----- Login code start
+    document.getElementById("login1").addEventListener("click", function () {
+      var email = document.getElementById("login_email").value;
+      var password = document.getElementById("login_password").value;
+
+      signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          // Signed in
+          const user = userCredential.user;
+          console.log(user);
+          // document
+          //   .getElementById("login2")
+          //   .setAttribute("href", "./profile.html");
+          window.location.assign("./profile.html");
+          // alert(user.email + " Login successfully!!!");
+
+          // document.getElementById("logout").style.display = "block";
+          // ...
+        })
+        .catch((error) => {
+          const errorCode = error.code;
+          const errorMessage = error.message;
+          console.log(errorMessage);
+          alert(errorMessage);
+        });
+    });
+    //----- End
+
+    //----- Logout code start
+    document.getElementById("logout").addEventListener("click", function () {
+      signOut(auth)
+        .then(() => {
+          // Sign-out successful.
+          console.log("Sign-out successful.");
+          alert("Sign-out successful.");
+          document.getElementById("logout").style.display = "none";
+        })
+        .catch((error) => {
+          // An error happened.
+          console.log("An error happened.");
+        });
+    });
+    //----- End
+  </script>
 </html>
