--- a/Buy-reg.html
+++ b/Buy-reg.html
@@ -1,56 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>
-    Buyers_Registration_Form
-  </title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./Buy-reg.css">
-  <script defer src="./Buy-reg.js"></script>
-</head>
-<body>
-  <div class="logo"></div>
-  <div class="container">
-    <div class="title">Registration</div>
-    <br>
-    <div>Please fill in this form to create your account.</div>
-    <form action="#">
-      <div class="user-details">
-        <div class="input-box">
-          <span class="detials">Full_Name</span>
-             <input id="Name_text" type="text" placeholder="Enter Your Full_Name Here" required>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Buyers_Registration_Form</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Buy-reg.css" />
+    <script defer src="./Buy-reg.js"></script>
+  </head>
+  <body>
+    <div class="logo"></div>
+    <div class="container">
+      <div class="title">Registration</div>
+      <br />
+      <div>Please fill in this form to create your account.</div>
+      <form action="#">
+        <div class="user-details">
+          <div class="input-box">
+            <span class="detials">Full_Name</span>
+            <input
+              id="Name_text"
+              type="text"
+              placeholder="Enter Your Full_Name Here"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <span class="detials">User_Name</span>
+            <input
+              id="User_text"
+              type="text"
+              placeholder="Enter Your User_name Here"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <span class="detials">Email_ID</span>
+            <input
+              id="Email_text"
+              type="text"
+              placeholder="Enter Your Email_ID Here"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <span class="detials">Mobile_Number</span>
+            <input
+              id="Mobile_text"
+              type="text"
+              placeholder="Enter Your Mobile_Number Here"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <span class="detials">Password</span>
+            <input
+              type="password"
+              id="psw"
+              name="psw"
+              pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+              title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+              placeholder="Enter Your Password Here"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <span class="detials">Confirm_Password</span>
+            <input
+              id="Confirm_Password_text"
+              type="text"
+              placeholder="Enter Your Confirm_Password Here"
+              required
+            />
+          </div>
         </div>
-        <div class="input-box">
-          <span class="detials">User_Name</span>
-             <input id="User_text" type="text" placeholder="Enter Your User_name Here" required>
+        <div>
+          <p>
+            By creating an account you agree to our
+            <a href="#">Terms & Privacy</a>.
+          </p>
         </div>
-        <div class="input-box">
-          <span class="detials">Email_ID</span>
-             <input id="Email_text" type="text" placeholder="Enter Your Email_ID Here" required>
+        <div class="button1">
+          <button
+            id="register"
+            onclick="validate()"
+            type="submit"
+            class="input1"
+          >
+            Register
+          </button>
+          <br />
+          <br />
+          <p style="text-align: center">
+            Already have an account?
+            <a href="Buy-sgin.html" target="_blank">Sign in</a>.
+          </p>
         </div>
-        <div class="input-box">
-          <span class="detials">Mobile_Number</span>
-             <input id="Mobile_text" type="text" placeholder="Enter Your Mobile_Number Here" required>
-        </div>
-        <div class="input-box">
-          <span class="detials">Password</span>
-          <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" placeholder="Enter Your Password Here" required>
-        </div>
-        <div class="input-box">
-          <span class="detials">Confirm_Password</span>
-             <input id="Confirm_Password_text" type="text" placeholder="Enter Your Confirm_Password Here" required>
-        </div>
-      </div>
-      <div><p >By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p></div>
-      <div class="button1">
-        <button onclick="validate()" type="submit" class="input1">Register</button>
-        <br>
-        <br>
-        <p style="text-align: center;">Already have an account? <a href="Buy-sgin.html" target="_blank">Sign in</a>.</p>
-      </div>
-    </form>
-  </div>
-</body>
+      </form>
+    </div>
+  </body>
+
+  <!-- <script src="firebase.js"></script> -->
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-analytics.js";
+    import {
+      getAuth,
+      createUserWithEmailAndPassword,
+      signInWithEmailAndPassword,
+      signOut,
+    } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDbPXyCbCOJjzcyuv83DiCDOQ6we7UWW-8",
+      authDomain: "shopping-project-75280.firebaseapp.com",
+      projectId: "shopping-project-75280",
+      storageBucket: "shopping-project-75280.appspot.com",
+      messagingSenderId: "721785274820",
+      appId: "1:721785274820:web:bcccd4f4cd70351ddc2491",
+      measurementId: "G-1EYVF421XL",
+    };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+    const auth = getAuth();
+
+    //----- New Registration code start
+    document.getElementById("register").addEventListener("click", function () {
+      var email = document.getElementById("Email_text").value;
+      var password = document.getElementById("Confirm_Password_text").value;
+      //For new registration
+      createUserWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          // Signed in
+          const user = userCredential.user;
+          console.log(user);
+          alert("Registration successfully!!");
+          window.location.assign("./Buy-sgin.html");
+
+          // ...
+        })
+        .catch((error) => {
+          const errorCode = error.code;
+          const errorMessage = error.message;
+          // ..
+          console.log(errorMessage);
+          alert(error);
+        });
+    });
+    //----- End
+  </script>
 </html>
