--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <section id="header">
-        <a href="#"><img src="logo.png" class="logo" alt="" width="120px" height="95px"></a>
+        <a href="#"><img src="Logo.png" class="logo" alt="" width="120px" height="95px"></a>
 
         <div class="search-box">
             <div class="row">
