--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         </div>
     </footer>
 
-    <script src="Hp.js">
+    <script src="./Hp.js">
     const Signup = document.getElementById('Signup');
 const close1 = document.getElementById('close1');
 const cont = document.getElementById('container');
