--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         </div>
     </footer>
 
-    <script src="./Hp.js"></script>
+    <script src="./HP.js"></script>
         <script>
     const Signup = document.getElementById('Signup');
 const close1 = document.getElementById('close1');
