--- a/profile.html
+++ b/profile.html
@@ -131,7 +131,7 @@
             console.log("Sign-out successful.");
             alert("Sign-out successful.");
             document.getElementById("logout").style.display = "none";
-            window.location.assign("./HP.html");
+            window.location.assign("./index.html");
           })
           .catch((error) => {
             // An error happened.
